[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
aes-gcm = "0.10.3"
aes-soft = "0.6"
tokio = { version = "1", features = ["full", "signal"] }
tun = "0.6.1"
tun-tap = "0.1.4"
serde = "1.0"
serde_derive = "1.0.190"
bincode = "1.3"
rand = "0.8"
anyhow = "1.0"
ctrlc = "3.1"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
generic-array = "0.14"
socket2 = "0.4"
env_logger = "0.9"
log = "0.4.20"
pnet = "0.35.0"
httparse = "1.9.4"
etherparse = "0.15.0"
